styles/site.css
.resource-guides-grid {
  row-gap: 1.75rem;
}

.resource-guide-group {
  padding-right: 1.5rem;
}

.resource-guide-group ul {
  list-style: none;
  padding-left: 0;
  margin-bottom: 0;
}

.resource-guide-group li + li {
  margin-top: 1rem;
}

.page-columns.page-layout-full {
  width: 100%;
}

hr {
  border: 0;
  height: 0;
  margin: 0;
}

#quarto-sidebar,
#quarto-margin-sidebar,
.sidebar,
.margin-sidebar {
  border: 0 !important;
}

@media (min-width: 1200px) {
  .page-columns.page-layout-full {
    grid-template-columns: [screen-start] 1rem [screen-start-inset page-start] minmax(0, 3fr) [page-start-inset] 1rem [body-start-outset] 0 [body-start] 0 [body-content-start] minmax(0, 14fr) [body-content-end] 1rem [body-end] 0 [body-end-outset] 1rem [page-end-inset] minmax(0, 3fr) [page-end] 0 [screen-end-inset] 1rem [screen-end] !important;
  }
}

@media (max-width: 991.98px) {
  .resource-guide-group {
    padding-right: 0;
  }
}

